--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./styles.css">
-	<title>Document</title>
+	<title>Sistema de Tienda</title>
 </head>
 	<body class="main">
 		<section class="btn-box">
-			<button class="btnform">CLIENTES</button>
-			<button class="btnform">PRODUCTOS</button>
-			<button class="btnform">PEDIDOS</button>
+			<button class="btnform" id="btn-clientes">CLIENTES</button>
+			<button class="btnform" id="btn-productos">PRODUCTOS</button>
+			<button class="btnform" id="btn-pedidos">PEDIDOS</button>
 		</section>
+		<script src="index.js"></script>
 	</body>
 </html>
